--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,27 @@
+/* body {
+  background-image: url("./assets/topography.svg"), linear-gradient(110deg, #ffffff, #0f0f0f);
+  background-size: 325px, auto;
+  background-attachment: fixed;
+} */
+
 .App {
   text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 2em;
+}
+
+.verticalCenter {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+@font-face {
+  font-family: yellowtail;
+  src: url("./assets/Yellowtail-Regular.otf");
 }
 
 .App-logo {
